# aiotaskq

./: .coveragerc  .gitignore  .pylintrc  .pylintrc.sample_apps  .pylintrc.test  .pylintrc.tests  .pypirc  README.md  activate.sh  check-docs.sh  check_redis_ready.py  demo-sample-apps-simple-app-aiotaskq.sh  demo-sample-apps-simple-app-celery.sh  docker-compose.yml  docker.sh  enter_env.sh  env_create.sh  install_dependencies.sh  lint.sh  package-lock.json  package.json  publish.sh  pyproject.toml  requirements.txt  setup.cfg  test.sh  test_prepare.sh  update-docs.sh  worker.py
.github/workflows/: build.yaml  check-docs.yaml  check-guides.yaml  coverage.yaml  publish.yaml  pylint.yaml  run-checks.yaml
aio_redis_taskq/: __init__.py
aiotaskq/: __init__.py  constants.py  main.py
docs/: DOCS.md  check-guides.sh
sample_apps/: pyproject.template.toml  pyproject.toml
sample_apps/simple_app/: pyproject.template.toml
sample_apps/simple_app/src/simple_app/: aiotaskq.py  app_aiotaskq.py  app_celery.py  celery.py  tasks_celery.py
sample_apps/src/sample_apps/: __init__.py
sample_apps/src/sample_apps/simple_app/: __init__.py  aiotaskq.py  app_aiotaskq.py  app_celery.py  celery.py  tasks_aiotaskq.py
sample_apps/src/sample_apps/simple_app_implicit_instance/: __init__.py  app_aiotaskq.py
src/aiotaskq/: __init__.py  __main__.py  app.py  concurrency_manager.py  config.py  constants.py  exceptions.py  interfaces.py  main.py  pubsub.py  serde.py  task.py  utils.py  worker.py
src/aiotaskq/tests/: __init__.py  conftest.py  integration_test.py  test_app.py  test_cli.py  test_concurrency_manager.py  test_integration.py  test_pubsub.py  test_worker.py
src/aiotaskq/tests/apps/: __init__.py  simple_app.py
src/aiotaskq/tests/apps/simple_app/: app.py  tasks.py
src/aiotaskq/tests/apps/simple_app_celery/: app.py  celery.py  tasks.py
src/aiotaskq/tests/apps/simple_app_encapsulated/: __init__.py  aiotaskq.py  app.py
src/aiotaskq/tests/apps/simple_app_encapsulated/some_module/: tasks.py
src/aiotaskq/tests/apps/simple_app_encapsulated_2/: __init__.py  some_file_name.py
src/aiotaskq/tests/apps/simple_app_encapsulated_2/some_module/: tasks.py
src/aiotaskq/tests/apps/simple_app_starlette/: app.py  tasks.py
src/sample_apps/: README.md  __init__.py  demo-sample-apps-simple-app-celery.sh  demo-sample-apps-simple-app.sh  pyproject.template.toml  pyproject.toml
src/sample_apps/simple_app/: __init__.py  aiotaskq.py  app_aiotaskq.py  app_celery.py  celery.py  tasks_aiotaskq.py  tasks_celery.py
src/sample_apps/simple_app_implicit_instance/: __init__.py  app_aiotaskq.py  app_celery.py  celery.py
src/sample_apps/src/sample_apps/simple_app/: app_celery.py  tasks_celery.py
src/sample_apps/src/sample_apps/simple_app_implicit_instance/: app_celery.py
src/tests/: conftest.py  pyproject.template.toml  test_app.py  test_celery_parity.py  test_cli.py  test_concurrency.py  test_concurrency_manager.py  test_docs_sample_apps.py  test_integration.py  test_pubsub.py  test_serde.py  test_sync_async_parity.py  test_task.py  test_worker.py
src/tests/apps/: __init__.py  simple_app.py
src/tests/apps/sample_app_django/: .coveragerc  manage.py  some_file.txt
src/tests/apps/sample_app_django/api/: models.py  tasks.py  utils.py
src/tests/apps/sample_app_django/api/management/commands/: populate_db.py  show_total_spending_by_user.py
src/tests/apps/sample_app_django/api/migrations/: 0001_initial.py
src/tests/apps/sample_app_django/sample_app_django/: README.md  __init__.py  aiotaskq.py  asgi.py  celery.py  settings.py  urls.py  wsgi.py
src/tests/apps/sample_app_django/scripts/: populate_db.sh  test_show_total_spending_aiotaskq.sh  test_show_total_spending_celery.sh
