[build-system]
requires = [
    "setuptools>=42",
    "wheel"
]
build-backend = "setuptools.build_meta"
[project]
dependencies = [
    "aioredis==2.0.1",
    "redis==4.1.4",
    "typer==0.4.0",
    "click==8.0.4"
]
name = "aiotaskq"
version = "0.0.5"
[project.optional-dependencies]
tests = [
    "mypy==0.931",
    "mypy-extensions==0.4.3",
    "typing_extensions==4.1.1",
    "black==22.1.0",
    "pytest==7.1.2",
    "pytest-asyncio==0.19.0",
    "typing_extensions==4.1.1",
    "pytest==7.1.2",
    "coverage==6.4.1",
    "pylint==2.14.5",
]
[tool.black]
line-length = 100
