[metadata]
name = aiotaskq
version = 0.0.1
author = Imran Ariffin
author_email = ariffin.imran@gmail.com
description = A simple asynchronous task queue
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/imranariffin/aiotaskq
project_urls =
    Bug Tracker = https://github.com/imranariffin/aiotaskq/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9

[options.packages.find]
where = src
